@@ -429,3 +429,4 @@ class flagsDocs(object):
 from . import groups
 from . import selection
 from . import Timeseries
+from . import AtomGroup
